# telegram_auction_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init_.py  command_list.md  docker-compose.yml  main.py  main_api.py  main_bot.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
db_api/: Dockerfile_api  __init__.py  crud.py  database.py  main.py  main_api.py  models.py  requirements.txt  schemas.py
modules/: __init__.py  api_handler.py  bot_callbacks.py  bot_commands.py  bot_handlers.py  conversation_handlers.py  db_handler.py  err_handler.py  post_upload_conversation.py
settings/: debug_members.py  env.py
src/api/: Dockerfile  __init__.py  crud.py  models.py  schemas.py
src/bot/: Dockerfile  api_handler.py  bot_callbacks.py  bot_commands.py  bot_handlers.py  err_handler.py  post_upload_conversation.py  requirements.txt
src/common/settings/: env.py
tests/fake_data/: generate_fake_data.py
utils/: dqdict.py
