[tool.poetry]
name = "telegram-auction-bot"
version = "0.1.0"
description = ""
authors = ["Alexey Korzunin <54314123+akorzunin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
